[package]
name = "BloonsAI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "BloonsAI"
crate-type = ["cdylib"]
path = "src/Memory/lib.rs"

[dependencies]
pyo3 = { version = "0.17.1", features = ["extension-module"] }
winapi = {version = "0.3.9", features = ["psapi", "processthreadsapi", "handleapi", "memoryapi"]}
